Trying to fix height of logo on mobile

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -43,6 +43,7 @@
   justify-content: center;
   background-color: var(--color-header);
   padding: 1rem 1rem 2rem 1rem;
+  height: auto;
 }
 
 .header__nav {
